@@ -1,6 +1,6 @@
-Date: 2022-10-16
+Date: 2022-11-18
 Package: CHNOSZ
-Version: 1.9.9-44
+Version: 1.9.9-45
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
 Authors@R: c(
     person("Jeffrey", "Dick", , "j3ffdick@gmail.com", role = c("aut", "cre"),
